--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
             "email": "nicholas@iotecnologia.com.br"
         }
     ],
-  "autoload": {
+    "require": {
+        "alchemy/zippy": "^0.3.5"
+    },
+    "autoload": {
     "files": [ "mu-migration.php" ]
   }
 }
